Return validation rules in voucher response